* 2016.11.08 - added standard datasets to demo, crowd-benchmark and crowd-tune Caffe and other DNN frameworks