@@ -1,0 +1,29 @@
+{
+  "backup_data_uid": "0a4f26aa98034fd2", 
+  "backup_module_uid": "8a7141c59cd335f5", 
+  "backup_module_uoa": "dataset", 
+  "cm_outdated": {
+    "cm_access_control": {
+      "comments_groups": "admin", 
+      "read_groups": "all", 
+      "write_groups": "owner"
+    }, 
+    "powered_by": {
+      "name": "Collective Mind Engine", 
+      "version": "1.0.1977.beta"
+    }
+  }, 
+  "control": {
+    "author_uoa": "0728a400aa1c86fe", 
+    "engine": "CM", 
+    "iso_datetime": "2016-11-08T16:41:08.016609", 
+    "version": [
+      "1", 
+      "8", 
+      "3", 
+      "2"
+    ]
+  }, 
+  "data_name": "image-jpeg-dnn-cropped-panda", 
+  "description": "cDatasets/MiDataSets for cBench, see http://cTuning.org"
+}
